--- a/BolRetailerAPI/BolRetailerAPI.csproj
+++ b/BolRetailerAPI/BolRetailerAPI.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>BolRetailerAPI</PackageId>
-    <Version>Alpha-0.0.1</Version>
+    <Version>0.0.2-beta</Version>
     <Authors>Soneritics</Authors>
     <Description>Retailer API for Bol.com</Description>
     <IsPackable>true</IsPackable>
