--- a/BolRetailerAPI/BolRetailerAPI.csproj
+++ b/BolRetailerAPI/BolRetailerAPI.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>BolRetailerAPI</PackageId>
-    <Version>3.0.0</Version>
+    <Version>5.0.0</Version>
     <Authors>Soneritics</Authors>
-    <Description>Retailer API for Bol.com</Description>
+    <Description>Retailer API v5for Bol.com</Description>
     <IsPackable>true</IsPackable>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
