Changes for v6 of the Bol API
https://api.bol.com/retailer/public/Retailer-API/v6/migrationguide/v5-v6/migrationguide.html

--- a/BolRetailerAPI.Tests/Tests.csproj
+++ b/BolRetailerAPI.Tests/Tests.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -14,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BolRetailerAPI\BolRetailerAPI.csproj" />
+    <ProjectReference Include="..\BolRetailerAPI\BolRetailerApi.csproj" />
   </ItemGroup>
 
 </Project>
